[package]
name = "hpl-utils"
description = "utilities to be used accross honeycomb protocol library"
authors = ["Sultan Nadeem <sultanndilaram@gmail.com>"]
version = "0.1.8"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "=1.13.0"